# vera_hello_world

./: .gitignore  CMakeLists.txt  README.md  fullscreen.html  hello_world.js  hello_world.wasm  index.html
assets/wasm/: fullscreen.html  index.html  webxr-polyfill.module.js
doc/: hello_world.js
docs/: hello_world.js
src/: main.cpp
www/: hello_world.wasm
